deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: humidity-api
  labels:
    app: humidity-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: humidity-api
  template:
    metadata:
      labels:
        app: humidity-api
    spec:
      containers:
        - name: humidity-container
          image: ahmedkhairaldin/humidity_prediction
          ports:
            - containerPort: 8000
        - name: MLFLOW_TRACKING_URI
            value: https://user-akhairaldin-mlflow.user.lab.sspcloud.fr
