deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: humidity-service
spec:
  selector:
    app: humidity-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
